--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,17 @@
-spring:
+# master 数据源配置
+master:
   datasource:
-    #    测试库
+    url: jdbc:mysql://localhost:3306/learn_mysql?useUnicode=true&characterEncoding=utf8
     username: root
-    password: whut.VINCENT920812
-    #    driver-class-name: com.mysql.cj.jdbc.Driver
-    #    url: jdbc:mysql://10.255.237.120:3306/zentaoep?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8&zeroDateTimeBehavior=convertToNull
-    url: jdbc:p6spy:mysql://10.255.237.120:3306/zentaoep?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC&zeroDateTimeBehavior=round
-    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+    password: password
+    driverClassName: com.mysql.cj.jdbc.Driver
 
-mybatis-plus:
-  configuration:
-    map-underscore-to-camel-case: true
-    auto-mapping-behavior: full
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath*:mapper/*.xml
-  global-config:
-    # 逻辑删除配置
-    db-config:
-      # 删除前
-      logic-not-delete-value: 0
-      # 删除后
-      logic-delete-value: 1
+# second 数据源配置
+second:
+  datasource:
+    url: jdbc:mysql://localhost:33306/aaa?useUnicode=true&characterEncoding=utf8
+    username: root
+    password: 123456
+    driverClassName: com.mysql.cj.jdbc.Driver
+server:
+  port: 9999
