--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # master 数据源配置
 master:
   datasource:
-    url: jdbc:mysql://localhost:3306/learn_mysql?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/learn_mysql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
     username: root
     password: password
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -9,9 +9,14 @@ master:
 # second 数据源配置
 second:
   datasource:
-    url: jdbc:mysql://localhost:33306/aaa?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:33306/aaa?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
     username: root
     password: 123456
     driverClassName: com.mysql.cj.jdbc.Driver
 server:
   port: 9999
+
+#mybatis-plus:
+#  mapper-locations: classpath*:mapper/**/*.xml
+
+
