--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
 		</dependency>
 
 
-<!--		<dependency>-->
-<!--			<groupId>com.alibaba</groupId>-->
-<!--			<artifactId>druid-spring-boot-starter</artifactId>-->
-<!--			<version>${druid-version}</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid-version}</version>
+		</dependency>
 
 		<!--httpclient-->
 		<dependency>
