--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>1.8</java.version>
 		<mybatis-plus.version>3.4.3</mybatis-plus.version>
 		<mybatis-plus-generator.version>3.4.1</mybatis-plus-generator.version>
-		<druid-version>1.2.8</druid-version>
+<!--		<druid-version>1.2.8</druid-version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -27,11 +27,11 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>${druid-version}</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.alibaba</groupId>-->
+<!--			<artifactId>druid-spring-boot-starter</artifactId>-->
+<!--			<version>${druid-version}</version>-->
+<!--		</dependency>-->
 
 		<!--httpclient-->
 		<dependency>
@@ -113,6 +113,12 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.7.3</version>
 		</dependency>
 
 	</dependencies>
