--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,62 +1,29 @@
-# master 数据源配置
-
-spring:
-  datasource:
-    dynamic:
-      druid:
-        #监控统计拦截的filters
-        filters: stat
-        #配置初始化大小/最小/最大
-        initial-size: 1
-        min-idle: 1
-        max-active: 20
-        #获取连接等待超时时间
-        max-wait: 60000
-        #间隔多久进行一次检测，检测需要关闭的空闲连接
-        time-between-eviction-runs-millis: 60000
-        #一个连接在池中最小生存的时间
-        min-evictable-idle-time-millis: 300000
-        validation-query: SELECT 'x'
-        test-while-idle: true
-        test-on-borrow: false
-        test-on-return: false
-        #打开PSCache，并指定每个连接上PSCache的大小。oracle设为true，mysql设为false。分库分表较多推荐设置为false
-        pool-prepared-statements: false
-        max-pool-prepared-statement-per-connection-size: 20
-        stat:
-          merge-sql: true
-          log-slow-sql: true
-          slow-sql-millis: 2000
-      primary: master
-      strict: false
-      datasource:
-        master:
-          url: jdbc:mysql://localhost:3306/learn_mysql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-          username: root
-          password: password
-          driverClassName: com.mysql.cj.jdbc.Driver
-        slave:
-          url: jdbc:mysql://localhost:33306/aaa?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-          username: root
-          password: 123456
-          driverClassName: com.mysql.cj.jdbc.Driver
-
-#master:
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/learn_mysql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-#    username: root
-#    password: password
-#    driverClassName: com.mysql.cj.jdbc.Driver
-
-# second 数据源配置
-#second:
-#  datasource:
-#    url: jdbc:mysql://localhost:33306/aaa?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-#    username: root
-#    password: 123456
-#    driverClassName: com.mysql.cj.jdbc.Driver
 server:
   port: 9999
+spring:
+  jackson:
+    # 东八区
+    time-zone: GMT+8
+    # 时间戳
+    serialization:
+      write-dates-as-timestamps: true
+  datasource:
+    dynamic:
+      primary: pcd_37 #设置默认的数据源或者数据源组,默认值即为master
+      strict: true #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
+      datasource:
+        pcd_37:
+          url: jdbc:mysql://10.253.17.37:3306/demo?characterEncoding=utf8&useSSL=false
+          username: root
+          password: mysql@Devspace!
+          driver-class-name: com.mysql.jdbc.Driver # 3.2.0开始支持SPI可省略此配置
+#          type: com.alibaba.druid.pool.DruidDataSource
+        pcd_43:
+          url: jdbc:mysql://10.253.17.43:3306/demo?characterEncoding=utf8&useSSL=false
+          username: root
+          password: mysql@Devspace!
+          driver-class-name: com.mysql.jdbc.Driver
+#          type: com.alibaba.druid.pool.DruidDataSource
 
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*.xml
